// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch Generator - Snapshot Tests (Intermediate Data) > should produce consistent dimensions for base size 1`] = `
{
  "height": 26,
  "padding": 4,
  "size": "base",
  "thumbSize": 18,
  "width": 42,
}
`;

exports[`Switch Generator - Snapshot Tests (Intermediate Data) > should produce consistent dimensions for lg size 1`] = `
{
  "height": 30,
  "padding": 4,
  "size": "lg",
  "thumbSize": 22,
  "width": 50,
}
`;

exports[`Switch Generator - Snapshot Tests (Intermediate Data) > should produce consistent dimensions for sm size 1`] = `
{
  "height": 22,
  "padding": 4,
  "size": "sm",
  "thumbSize": 14,
  "width": 34,
}
`;

exports[`Switch Generator - Snapshot Tests (Intermediate Data) > should produce consistent intermediate data for all variants (golden path) 1`] = `
{
  "dimensions": [
    {
      "height": 22,
      "padding": 4,
      "size": "sm",
      "thumbSize": 14,
      "width": 34,
    },
    {
      "height": 26,
      "padding": 4,
      "size": "base",
      "thumbSize": 18,
      "width": 42,
    },
    {
      "height": 30,
      "padding": 4,
      "size": "lg",
      "thumbSize": 22,
      "width": 50,
    },
  ],
  "disabledOpacity": 0.5,
  "labelGap": 8,
  "sizeConfig": {
    "classes": {
      "base": "h-6.5 w-10.5",
      "lg": "h-7.5 w-12.5",
      "sm": "h-5.5 w-8.5",
    },
    "default": "base",
    "descriptions": {
      "base": "Default switch size",
      "lg": "Large switch for prominent toggles",
      "sm": "Small switch for compact UIs",
    },
    "values": [
      "sm",
      "base",
      "lg",
    ],
  },
  "thumbColor": {
    "b": 1,
    "g": 1,
    "r": 1,
  },
  "trackColors": [
    {
      "bgVariableName": "color-surface-3",
      "checked": false,
      "disabled": false,
      "variant": "default",
    },
    {
      "bgVariableName": "color-surface-3",
      "checked": false,
      "disabled": true,
      "variant": "default",
    },
    {
      "bgVariableName": "color-primary",
      "checked": true,
      "disabled": false,
      "variant": "default",
    },
    {
      "bgVariableName": "color-surface-3",
      "checked": true,
      "disabled": true,
      "variant": "default",
    },
    {
      "bgVariableName": "color-surface-3",
      "checked": false,
      "disabled": false,
      "variant": "error",
    },
    {
      "bgVariableName": "color-surface-3",
      "checked": false,
      "disabled": true,
      "variant": "error",
    },
    {
      "bgVariableName": "color-error",
      "checked": true,
      "disabled": false,
      "variant": "error",
    },
    {
      "bgVariableName": "color-surface-3",
      "checked": true,
      "disabled": true,
      "variant": "error",
    },
  ],
  "variantConfig": {
    "classes": {
      "error": "ring-error",
    },
    "default": "default",
    "descriptions": {
      "default": "Default switch appearance",
      "error": "Error state for validation failures",
    },
    "values": [
      "default",
      "error",
    ],
  },
}
`;

exports[`Switch Generator - Snapshot Tests (Intermediate Data) > should produce consistent size config from registry 1`] = `
{
  "classes": {
    "base": "h-6.5 w-10.5",
    "lg": "h-7.5 w-12.5",
    "sm": "h-5.5 w-8.5",
  },
  "default": "base",
  "descriptions": {
    "base": "Default switch size",
    "lg": "Large switch for prominent toggles",
    "sm": "Small switch for compact UIs",
  },
  "values": [
    "sm",
    "base",
    "lg",
  ],
}
`;

exports[`Switch Generator - Snapshot Tests (Intermediate Data) > should produce consistent track color for checked default 1`] = `
{
  "bgVariableName": "color-primary",
  "checked": true,
  "disabled": false,
  "variant": "default",
}
`;

exports[`Switch Generator - Snapshot Tests (Intermediate Data) > should produce consistent track color for checked error 1`] = `
{
  "bgVariableName": "color-error",
  "checked": true,
  "disabled": false,
  "variant": "error",
}
`;

exports[`Switch Generator - Snapshot Tests (Intermediate Data) > should produce consistent track color for disabled checked 1`] = `
{
  "bgVariableName": "color-surface-3",
  "checked": true,
  "disabled": true,
  "variant": "default",
}
`;

exports[`Switch Generator - Snapshot Tests (Intermediate Data) > should produce consistent track color for unchecked default 1`] = `
{
  "bgVariableName": "color-surface-3",
  "checked": false,
  "disabled": false,
  "variant": "default",
}
`;

exports[`Switch Generator - Snapshot Tests (Intermediate Data) > should produce consistent variant config from registry 1`] = `
{
  "classes": {
    "error": "ring-error",
  },
  "default": "default",
  "descriptions": {
    "default": "Default switch appearance",
    "error": "Error state for validation failures",
  },
  "values": [
    "default",
    "error",
  ],
}
`;
